# pizza-site

./: db.sqlite3  pyproject.toml
ecommerce/: settings.py
pizza_site/: manage.py
pizza_site/page/: admin.py  models.py  urls.py  utils.py  views.py
pizza_site/page/migrations/: 0001_initial.py  0002_menu.py  0003_order_orderitem.py  0004_auto_20210224_1347.py  0005_auto_20210225_1929.py
pizza_site/pizza_site/: asgi.py  settings.py  urls.py  wsgi.py
pizza_site/static/common/: scripts.js  style.css
pizza_site/templates/: cart.html
pizza_site/templates/include/: base.html  footer.html  header.html
pizza_site/templates/pizza/: 02_about_us.html  03_menu.html  04_blog.html  05_contact.html  06_elements.html  index.html  pizza_list.html
static/common/: cart.js  scripts.js  style.css
static/css/: main.css
static/plugin-frameworks/: bootstrap.min.css
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0003_category_menu.py
store/templates/include/: footer.html  header.html
store/templates/pizza/: 03_menu.html  05_contact.html  checkout.html  index.html
store/templates/store/: cart.html  checkout.html  main.html  main1.html  store.html  store1.html
