[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["bashir-site <59281683+bashir-site@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
Pillow = "^8.1.0"
psycopg2 = "^2.8.6"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
